--- a/app/views/layouts/admin/_page_header.html.erb
+++ b/app/views/layouts/admin/_page_header.html.erb
@@ -6,7 +6,7 @@
   <%= csrf_meta_tag %>
 
   <link href="<%= admin_theme_path %>css/main.css" rel="stylesheet" type="text/css" />
-  <link href="<%= admin_theme_path %>_custom/admin_theme_overrides.css" rel="stylesheet" type="text/css" />
+  <link href="<%= admin_theme_path %>_custom/custom.css" rel="stylesheet" type="text/css" />
   <%= stylesheet_link_tag 'admin' %>
   
   <!-- <link href="<%= admin_theme_path %>css/bootstrap.css" rel="stylesheet" type="text/css" /> -->
