--- a/app/views/dm_core/admin/accounts/general.html.erb
+++ b/app/views/dm_core/admin/accounts/general.html.erb
@@ -7,8 +7,8 @@
 
 	<%= content_box :title => 'General Settings' do %>
 
-    <%= f.input :domain %>
-    <%= f.input :account_prefix %>
+    <%= f.input :domain, :required => true %>
+    <%= f.input :account_prefix, :required => true %>
     <%= f.input :preferred_site_title, :label => 'Site Title' %>
     <%= f.input :company_name %>
     <%= f.input :contact_email %>
