--- a/event/app/views/dm_event/registrations/new.html.erb
+++ b/event/app/views/dm_event/registrations/new.html.erb
@@ -1,3 +1,7 @@
+<% content_for :sidebar do %>
+  <%= render :partial => "sidebar_#{@workshop.event_style}" %>
+<% end %>
+
 <div id="workshop_registration">
   <div id="workshop_description">
     <%= render_workshop_description(@workshop) %>
@@ -13,7 +17,8 @@
       <% if @registration.user_profile.address_required %>
         <%= render :partial => 'section_address', :locals => {:f => f} %>
       <% end %>
-      <%= submit_or_cancel :save => I18n.t('ems.register_btn'), :cancel => I18n.t('ems.cancel_btn'), :cancel_url => admin_workshops_path %>
+      <% save_label = @workshop.crowdfunding? ? I18n.t('ems.donate_button') : I18n.t('ems.register_btn') %>
+      <%= submit_or_cancel :save => save_label, :cancel => I18n.t('ems.cancel_btn'), :cancel_url => admin_workshops_path %>
     <% end %>
   <% else %>
     <div class='ticket_information account_required'>
