make sure a liquid tag responds to the detail method

--- a/cms/app/views/dm_cms/admin/shared/_liquid_tags_ref.html.erb
+++ b/cms/app/views/dm_cms/admin/shared/_liquid_tags_ref.html.erb
@@ -2,7 +2,7 @@
   <div class="tagsinput block">
     <p>List of available tags<br><small><em>click for details</em></small></p>
     <% Liquid::Template.tags.sort.each do |tag, tag_class| %>
-      <% unless tag_class.details[:summary].blank? %>
+      <% if tag_class.respond_to?(:details) && !tag_class.details[:summary].blank? %>
         <a href="#" title="<%= tag_class.details[:summary] %>" data-toggle="modal" data-target="<%= "#tag_example_#{tag}" %>" ><span class="tag"><%= tag %></span></a>
       <% end %>
     <% end %>
@@ -11,7 +11,7 @@
 
 <%#--- following should not be in the sidebar, but main content section %>
 <% Liquid::Template.tags.each do |tag, tag_class| %>
-  <% unless tag_class.details[:description].blank? %>
+  <% if tag_class.respond_to?(:details) && !tag_class.details[:description].blank? %>
     <div id="<%= "tag_example_#{tag}" %>" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
