added in a sidebar for a workshop, and new liquid tag for fund raising status

--- a/event/app/views/dm_event/admin/workshops/_form.html.erb
+++ b/event/app/views/dm_event/admin/workshops/_form.html.erb
@@ -9,6 +9,7 @@
   <%= locale_frame :title => '' do |locale| %>
     <%= f.input "title_#{locale}", :label => 'Title', :id => 'title_error', :required => true %>
     <%= f.input "description_#{locale}", :label => 'Description', :hint => 'Markdown format', :wrapper => :vertical, :as => :text_full_width, :mono => true, :rows => 12 %>
+    <%= f.input "sidebar_#{locale}", :label => 'Sidebar', :hint => 'Markdown format', :wrapper => :vertical, :as => :text_full_width, :mono => true, :rows => 8 %>
   <% end %>
 
   <%= well_frame do %>
