--- a/event/app/views/dm_event/registrations/choose_payment.html.erb
+++ b/event/app/views/dm_event/registrations/choose_payment.html.erb
@@ -11,6 +11,7 @@
           :email => @registration.email
       service.item_name @registration.workshop.title
       service.tax '0.00'
+      service.cmd '_donations' if @registration.workshop.crowdfunding?
 
       service.notify_url dm_event.register_paypal_ipn_url if Rails.env.production?
       service.return_url dm_event.register_success_url(@registration.receipt_code)
