--- a/core/app/views/layouts/admin/_page_header.html.erb
+++ b/core/app/views/layouts/admin/_page_header.html.erb
@@ -59,6 +59,8 @@
 
   <script type="text/javascript" src="<%= admin_theme_path %>_custom/custom.js"></script>
 
+  <%= aced_tag %>
+
   <%= yield :head if content_for(:head)%>
 
 </head>
