--- a/app/assets/stylesheets/dm_core/application.css
+++ b/app/assets/stylesheets/dm_core/application.css
@@ -1,3 +1,6 @@
+/* @override 
+	http://dev.telugubasha.net:3500/assets/dm_core/application.css?body=1 */
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -17,4 +20,12 @@
   content: " ";
   display: table;
   clear: both;
+}
+
+/*--- default style for menus under construction / draft ---*/
+.draft_menu_right {
+  background: url(/assets/dm_core/draft_menu_bg.png) right repeat-y !important;
+}
+.draft_menu_left {
+  background: url(/assets/dm_core/draft_menu_bg.png) left repeat-y !important;
 }
