--- a/core/app/views/dm_core/admin/accounts/_sidebar.html.erb
+++ b/core/app/views/dm_core/admin/accounts/_sidebar.html.erb
@@ -8,6 +8,7 @@
 
 <ul class="navigation-light block">
   <li><%= link_to "General".html_safe, dm_core.admin_account_general_path %></li>
+  <li><%= link_to "Site Wide".html_safe, dm_core.admin_account_metadata_path %></li>
   <li><%= link_to "Email".html_safe, dm_core.admin_account_email_path %></li>
   <li><%= link_to "Analytics &amp; PayPal".html_safe, dm_core.admin_account_analytics_path %></li>
 </ul>
