--- a/event/app/views/dm_event/admin/registrations/_form.html.erb
+++ b/event/app/views/dm_event/admin/registrations/_form.html.erb
@@ -12,129 +12,103 @@
   </ul>
 <% end %>
 
-<div class="row-fluid">
-  <% toolbar = nav_bar_items([ link_to(icon_label('icon-plus', 'New'), '#', data: { toggle: "modal", target: "#enter_new_payment"}, title: 'New Payment', class: "nav-btn-primary") ]) %>
-  <%= content_frame :title => 'Recorded Payments', class: 'span6', :toolbar => toolbar do %>
-    <div class="table-overflow">
-      <table class="table table-condensed table-gradient table-hover">
-        <thead>
-          <tr>
-            <th width="75">Date</th>
-            <th>Description</th>
-            <th width="50">Paid</th>
-            <th>Method</th>
-            <th width="18"><%= icon_label('icon-edit', '') %></th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @registration.payment_histories.order('created_on ASC').each do |payment| %>
+<% if @workshop.workshop_prices.empty? %>
+  <h5>No workshop prices / options defined</h5>
+<% else %>
+  <div class="row-fluid">
+    <% toolbar = nav_bar_items([ link_to(icon_label('icon-plus', 'New'), '#', data: { toggle: "modal", target: "#enter_new_payment"}, title: 'New Payment', class: "nav-btn-primary") ]) %>
+    <%= content_frame :title => 'Recorded Payments', class: 'span6', :toolbar => toolbar do %>
+      <div class="table-overflow">
+        <table class="table table-condensed table-gradient table-hover">
+          <thead>
             <tr>
-              <td><%= format_date(payment.payment_date) %></td>
-              <td><%= payment.item_ref %></td>
-              <td><%= payment.total.format(:no_cents_if_whole => true, :symbol => true) %></td>
-              <td><%= payment.payment_method %></td>
-              <td>
-                <% if payment.user_profile #--- only allow editing of manual payments %>
-                  <%= link_to(icon_label('icon-edit', ''), '#', data: { toggle: "modal", target: "#edit_payment_#{payment.id}"}, title: 'Edit Payment') %>
-                <% end %>
-              </td>
+              <th width="75">Date</th>
+              <th>Description</th>
+              <th width="50">Paid</th>
+              <th>Method</th>
+              <th width="18"><%= icon_label('icon-edit', '') %></th>
             </tr>
+          </thead>
+          <tbody>
+            <% @registration.payment_histories.order('created_on ASC').each do |payment| %>
+              <tr>
+                <td><%= format_date(payment.payment_date) %></td>
+                <td><%= payment.item_ref %></td>
+                <td><%= payment.total.format(:no_cents_if_whole => true, :symbol => true) %></td>
+                <td><%= payment.payment_method %></td>
+                <td>
+                  <% if payment.user_profile #--- only allow editing of manual payments %>
+                    <%= link_to(icon_label('icon-edit', ''), '#', data: { toggle: "modal", target: "#edit_payment_#{payment.id}"}, title: 'Edit Payment') %>
+                  <% end %>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    <% end %>
+
+    <%= content_box :title => 'Payment Details', class: 'span6' do %>
+      <%= simple_form_for(@registration, :url => admin_registration_path) do |f| %>
+        <%= f.error_notification :message => "Please review the problems below" %>
+        <ul class="workshop_price_list">
+          <% @workshop.workshop_prices.each do |p| %>
+            <li>
+              <label><%= radio_button 'registration', 'workshop_price_id', p.id %><%= price_details(p) %></label>
+            </li>
           <% end %>
-        </tbody>
-      </table>
-    </div>
-  <% end %>
+        </ul>
 
-  <%= content_box :title => 'Payment Details', class: 'span6' do %>
-    <%= simple_form_for(@registration, :url => admin_registration_path) do |f| %>
-      <%= f.error_notification :message => "Please review the problems below" %>
-      <ul class="workshop_price_list">
-        <% @workshop.workshop_prices.each do |p| %>
-          <li>
-            <label><%= radio_button 'registration', 'workshop_price_id', p.id %><%= price_details(p) %></label>
-          </li>
-        <% end %>
-      </ul>
+        <div class="separator"></div>
 
-      <div class="separator"></div>
-
-      <% if false #--- [todo] can try for a more fancy selection style some other time %>
-        <div class="form-horizontal control-group integer optional registration_discount_value">
-          <label class="integer optional control-label" for="registration_discount_value">Discount</label>
-          <div class="controls">
-            <div class="input-append">
-              <input class="numeric integer optional" id="registration_discount_value" name="registration[discount_value]" type="text" />
-              <div class="btn-group" data-toggle="buttons-radio">
-                <input name="registration[discount_use_precent]" type="button" class="btn" value='%'>
-                <input name="registration[discount_use_precent]" type="button" class="btn" value='$'>
+        <% if false #--- [todo] can try for a more fancy selection style some other time %>
+          <div class="form-horizontal control-group integer optional registration_discount_value">
+            <label class="integer optional control-label" for="registration_discount_value">Discount</label>
+            <div class="controls">
+              <div class="input-append">
+                <input class="numeric integer optional" id="registration_discount_value" name="registration[discount_value]" type="text" />
+                <div class="btn-group" data-toggle="buttons-radio">
+                  <input name="registration[discount_use_precent]" type="button" class="btn" value='%'>
+                  <input name="registration[discount_use_precent]" type="button" class="btn" value='$'>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-      <% end %>
-
-      <% discount_currency = @registration.workshop_price ? @registration.workshop_price.price.currency.symbol : '-' %>
-      <div class="form-horizontal control-group integer optional registration_discount_value">
-        <label class="integer optional control-label" for="registration_discount_value">Discount</label>
-        <div class="controls input-append">
-          <%= f.text_field :discount_value, class: "numeric integer optional", size: '' %>
-          <div class="btn-group">
-            <%= f.select :discount_use_percent, [['%', true], [discount_currency, false]], {}, {style: "width: 60px", class: "select optional"} %>
+        <% end %>
+        
+        <% if @registration.workshop_price && @registration.workshop_price.price %>
+          <% discount_currency = @registration.workshop_price.price.currency.symbol %>
+          <div class="form-horizontal control-group integer optional registration_discount_value">
+            <label class="integer optional control-label" for="registration_discount_value">Discount</label>
+            <div class="controls input-append">
+              <%= f.text_field :discount_value, class: "numeric integer optional", size: '' %>
+              <div class="btn-group">
+                <%= f.select :discount_use_percent, [['%', true], [discount_currency, false]], {}, {style: "width: 60px", class: "select optional"} %>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <%= f.input :payment_comment, :label => 'Comment', :as => :text_full_width, :rows => 3 %>
+        <% end %>
+        
+        <%= f.input :payment_comment, :label => 'Comment', :as => :text_full_width, :rows => 3 %>
       
-      <%= submit_or_cancel :cancel_url => admin_workshop_path(@workshop) %>
+        <%= submit_or_cancel :cancel_url => admin_workshop_path(@workshop) %>
+      <% end %>
     <% end %>
-  <% end %>
 
-</div>
+  </div>
 
-<%= simple_form_for(:payment_history, :url => ajax_payment_admin_registration_path(@registration)) do |f| %>
-  <%= modal_dialog title: 'Enter New Payment', id: 'enter_new_payment', include_save: true do %>
-    <div class="form-horizontal control-group string required registration_payment_date">
-      <label class="string control-label" for="registration_payment_date">
-        Paid On
-      </label>
-      <div class="controls">
-        <ul class="dates-range no-append">
-            <li><input name="payment_history[payment_date]" type="text" value="<%= Date.today %>" placeholder="Select date..." class="datepicker" ></li>
-        </ul>
-      </div>
-      <div class="clearfix"></div>
-    </div>
-    <div class="form-horizontal control-group integer required registration_discount_value">
-      <label class="integer control-label required" for="registration_discount_value"><abbr title="required">*</abbr> Amount</label>
-      <div class="controls input-append">
-        <%= f.text_field :cost, class: "numeric integer optional", size: '' %>
-        <div class="btn-group">
-          <%= f.select :total_currency, @registration.workshop_price.currency_list, {}, {style: "width: 60px", class: "select"} %>
-        </div>
-      </div>
-    </div>
-    <%= f.input :payment_method, :label => 'Method', as: 'select', :collection => WorkshopPrice::PAYMENT_METHODS, :include_blank => false, input_html: {style: "width: 200px"} %>
-    <div class="clearfix"></div>
-    <%= f.input :item_ref, :label => 'Description', required: false %>
-    <%= f.input :bill_to_name, :label => 'Payed By', required: false %>
-    <%= f.input :receipt_requested, as: 'boolean', label: false, inline_label: 'Customer would like a receipt', required: false %>
-  <% end %>
-<% end %>
-
-<% @registration.payment_histories.order('created_on ASC').each do |payment_history| %>
-  <% #--- only allow editing of manual payments %>
-  <% if payment_history.user_profile %>
-    <%= simple_form_for(payment_history, :url => ajax_edit_payment_admin_registration_path(locale: I18n.locale, id: @registration, payment_id: payment_history.id)) do |f| %>
-      <%= modal_dialog title: 'Enter New Payment', id: "edit_payment_#{payment_history.id}", include_save: true,
-                       delete_url: ajax_delete_payment_admin_registration_path(locale: I18n.locale, id: @registration, payment_id: payment_history.id),
-                       delete_msg: 'Are you sure you want to delete this payment?' do %>
+  <%= simple_form_for(:payment_history, :url => ajax_payment_admin_registration_path(@registration)) do |f| %>
+    <%= modal_dialog title: 'Enter New Payment', id: 'enter_new_payment', include_save: true do %>
+      <% if @registration.workshop_price.nil? %>
+        <p><em>They must be registered for some type of payment first</em></p>
+      <% else %>
         <div class="form-horizontal control-group string required registration_payment_date">
           <label class="string control-label" for="registration_payment_date">
             Paid On
           </label>
           <div class="controls">
             <ul class="dates-range no-append">
-                <li><input name="payment_history[payment_date]" type="text" value="<%= payment_history.payment_date.to_date %>" placeholder="Select date..." class="datepicker" ></li>
+                <li><input name="payment_history[payment_date]" type="text" value="<%= Date.today %>" placeholder="Select date..." class="datepicker" ></li>
             </ul>
           </div>
           <div class="clearfix"></div>
@@ -152,6 +126,43 @@
         <div class="clearfix"></div>
         <%= f.input :item_ref, :label => 'Description', required: false %>
         <%= f.input :bill_to_name, :label => 'Payed By', required: false %>
+        <%= f.input :receipt_requested, as: 'boolean', label: false, inline_label: 'Customer would like a receipt', required: false %>
+      <% end %>
+    <% end %>
+  <% end %>
+
+  <% @registration.payment_histories.order('created_on ASC').each do |payment_history| %>
+    <% #--- only allow editing of manual payments %>
+    <% if payment_history.user_profile %>
+      <%= simple_form_for(payment_history, :url => ajax_edit_payment_admin_registration_path(locale: I18n.locale, id: @registration, payment_id: payment_history.id)) do |f| %>
+        <%= modal_dialog title: 'Enter New Payment', id: "edit_payment_#{payment_history.id}", include_save: true,
+                         delete_url: ajax_delete_payment_admin_registration_path(locale: I18n.locale, id: @registration, payment_id: payment_history.id),
+                         delete_msg: 'Are you sure you want to delete this payment?' do %>
+          <div class="form-horizontal control-group string required registration_payment_date">
+            <label class="string control-label" for="registration_payment_date">
+              Paid On
+            </label>
+            <div class="controls">
+              <ul class="dates-range no-append">
+                  <li><input name="payment_history[payment_date]" type="text" value="<%= payment_history.payment_date.to_date %>" placeholder="Select date..." class="datepicker" ></li>
+              </ul>
+            </div>
+            <div class="clearfix"></div>
+          </div>
+          <div class="form-horizontal control-group integer required registration_discount_value">
+            <label class="integer control-label required" for="registration_discount_value"><abbr title="required">*</abbr> Amount</label>
+            <div class="controls input-append">
+              <%= f.text_field :cost, class: "numeric integer optional", size: '' %>
+              <div class="btn-group">
+                <%= f.select :total_currency, @registration.workshop_price.currency_list, {}, {style: "width: 60px", class: "select"} %>
+              </div>
+            </div>
+          </div>
+          <%= f.input :payment_method, :label => 'Method', as: 'select', :collection => WorkshopPrice::PAYMENT_METHODS, :include_blank => false, input_html: {style: "width: 200px"} %>
+          <div class="clearfix"></div>
+          <%= f.input :item_ref, :label => 'Description', required: false %>
+          <%= f.input :bill_to_name, :label => 'Payed By', required: false %>
+        <% end %>
       <% end %>
     <% end %>
   <% end %>
