--- a/event/app/views/dm_event/admin/workshops/_registration_stats.html.erb
+++ b/event/app/views/dm_event/admin/workshops/_registration_stats.html.erb
@@ -31,24 +31,30 @@
   <% end %>
 </ul>
 
-<div class="separator"></div>
+<% unless @workshop.workshop_prices.empty? %>
+  <div class="separator"></div>
 
-<% financials = @workshop.financial_details(:summary) %>
-<h5>Price Distribution <small>for attending</small></h5>
-<ul class="text-stats block">
+  <% financials = @workshop.financial_details(:summary) %>
+  <h5>Price Distribution <small>for attending</small></h5>
+  <ul class="text-stats block">
     <li><%= financials[:summary][:total_possible].format(:no_cents => true) %><span>best</span></li>
     <li><%= financials[:summary][:total_possible_worst].format(:no_cents => true) %><span>worst (80%)</span></li>
     <li style="color:green"><%= financials[:summary][:total_paid].format(:no_cents => true) %><span>paid</span></li>
-</ul>
+  </ul>
 
-<%= link_to 'Financial Details', financials_admin_workshop_url(@workshop), {style: "margin-bottom: 10px; display: inline-block;"} %>
+  <%= link_to 'Financial Details', financials_admin_workshop_url(@workshop), {style: "margin-bottom: 10px; display: inline-block;"} %>
 
-<ul class="block progress-statistics">
-  <% num_attending = workshop.registrations.number_of(:attending) %>
-  <% workshop.registrations.number_of(:for_all_prices).each do |price_id, registration_count| %>
-    <% price = WorkshopPrice.find_by_id(price_id ) %>
-    <li><%= slim_progress_bar(label: price.price_formatted, value: registration_count, color: 'success', 
-            percentage: registration_count.percent_of(num_attending), bottom_label: price.price_description) %></li>
-  <% end %>
-</ul>
-
+  <ul class="block progress-statistics">
+    <% num_attending = workshop.registrations.number_of(:attending) %>
+    <% workshop.registrations.number_of(:for_all_prices).each do |price_id, registration_count| %>
+      <% if price_id %>
+        <% price = WorkshopPrice.find_by_id(price_id ) %>
+        <li><%= slim_progress_bar(label: price.price_formatted, value: registration_count, color: 'success', 
+                percentage: registration_count.percent_of(num_attending), bottom_label: price.price_description) %></li>
+      <% else %>
+        <li><%= slim_progress_bar(label: 'no pricing selected', value: registration_count, color: 'noshow', 
+                percentage: registration_count.percent_of(num_attending), bottom_label: '') %></li>
+      <% end %>
+    <% end %>
+  </ul>
+<% end %>
