changes to make liquid work in email

--- a/cms/app/views/layouts/email_templates/dm_cms_post_notify.html.erb
+++ b/cms/app/views/layouts/email_templates/dm_cms_post_notify.html.erb
@@ -4,6 +4,6 @@
 
 <h3><%= @post_title %></h3>
 
-<%= @post_summary %>
+<%= display_post_summary(@post) %>
 
 <p><%= link_to I18n.t('cms.read_more'), @post_link %></p>
