--- a/core/app/views/dm_core/admin/accounts/analytics.html.erb
+++ b/core/app/views/dm_core/admin/accounts/analytics.html.erb
@@ -20,6 +20,7 @@
       <%= f.input :preferred_sofort_user_id, :label => 'User ID' %>
       <%= f.input :preferred_sofort_project_id, :label => 'Project ID' %>
       <%= f.input :preferred_sofort_project_password, :label => 'Project Password' %>
+      <%= f.input :preferred_sofort_notification_password, :label => 'Notification Password' %>
     <% end %>
 
     <%= submit_or_cancel :cancel_url => dm_core.admin_account_analytics_path %>
