--- a/cms/app/views/layouts/email_templates/dm_cms_post_notify.html.erb
+++ b/cms/app/views/layouts/email_templates/dm_cms_post_notify.html.erb
@@ -1,8 +1,12 @@
+<br />
+
 <p><%= I18n.t 'cms.blog_notify_new_post' %>: '<strong><%= @blog_title %></strong>'</p>
+<a href="<%= @post_link %>"><%= I18n.t 'cms.blog_notify_read_post' %></a>
 
-<%= link_to I18n.t('cms.blog_notify_read_post'), @post_link %>
+<br /><br />
+<hr />
 
-<h3><%= @post_title %></h3>
+<h1><%= @post_title %></h1>
 
 <%= display_post_summary(@post) %>
 
