--- a/event/app/views/layouts/email_templates/dm_event_payment_reminder.html.erb
+++ b/event/app/views/layouts/email_templates/dm_event_payment_reminder.html.erb
@@ -16,7 +16,7 @@
 
 <p><%= link_to I18n.t('ems.ticket_payment_link_text'), @payment_link %></p>
 
-<p>If you wish to cancel your participation, please send an email to <%= @registration.workshop.contact_email %>.</p>
+<p><%= I18n.t('ems.ticket_if_you_wish_to_cancel', :value => h(@registration.workshop.contact_email))%></p>
 
 <p><%= I18n.t('ems.ticket_receipt_questions', :value => h(@registration.workshop.contact_email)) %></p>
 
