--- a/core/app/views/dm_core/admin/users/_form.html.erb
+++ b/core/app/views/dm_core/admin/users/_form.html.erb
@@ -21,4 +21,25 @@
     <%= submit_or_cancel :cancel_url => dm_core.admin_users_url %>
 
 	<% end %>
+
+  <% if defined?(DmEvent) && current_user.is_sysadmin? %>
+    <%= content_box :title => "Event Registrations" do %>
+      <table class="table table-bordered table-condensed table-striped">
+        <thead>
+          <tr>
+            <th class="name">Workshop Title</th>
+            <th class="name">Domain</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% Registration.unscoped.where(user_profile_id: @user.user_profile).each do |registration| -%>
+            <tr>
+              <td class="name"><%= registration.workshop ? registration.workshop.title : 'oops' %></td>
+              <td class="name"><%= registration.account.domain %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    <% end %>
+  <% end %>
 <% end %>
