--- a/event/app/views/layouts/email_templates/dm_event_payment_reminder.text.erb
+++ b/event/app/views/layouts/email_templates/dm_event_payment_reminder.text.erb
@@ -4,15 +4,19 @@
 
 <%= I18n.t('email.salutation', :value => h(@registration.full_name)) %>
 
+<%= I18n.t('ems.ticket_registered_following_event') %>:
+
+<%=h @registration.workshop.title %>
+
 <%= I18n.t('ems.ticket_outstanding_balance') %>:
 
 <%= @balance_owed %>
 
 <%= I18n.t('ems.ticket_payment_link_leadin' )%>:
 
-<%= @payment_link %>
+<%= I18n.t('ems.ticket_payment_link_text') %>: <%= @payment_link %>
 
-If you wish to cancel your participation, please send an email to EMAIL.
+<p><%= I18n.t('ems.ticket_if_already_paid', :value => h(@registration.workshop.contact_email))%></p>
 
 <%= I18n.t('ems.ticket_receipt_questions', :value => h(@registration.workshop.contact_email)) %>
 
